--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "cookie-parser": "^1.4.3",
         "cookie-session": "^2.0.0-alpha.2",
         "csurf": "^1.9.0",
-        "express": "^4.14.0",
+        "express": "^4.16.3",
         "http-proxy-middleware": "^0.17.4",
         "knox": "^0.9.2",
         "multer": "^1.3.0",
@@ -37,6 +37,7 @@
         "react-redux": "^5.0.5",
         "react-router": "^4.2.0",
         "react-router-dom": "^4.2.2",
+        "react-sparklines": "^1.7.0",
         "redux": "^3.7.1",
         "redux-devtools-extension": "^2.13.2",
         "redux-promise": "^0.5.3",
@@ -48,5 +49,8 @@
     },
     "keywords": [],
     "author": "",
-    "license": "ISC"
+    "license": "ISC",
+    "devDependencies": {
+        "eslint-plugin-react": "^7.11.1"
+    }
 }
